--- a/content/index.mdx
+++ b/content/index.mdx
@@ -13,7 +13,7 @@ Aqui voy a poner los cambios hechos en el codigo.
 
 El codigo va estar en zonas similares a estas.
 
-```java
+```javascript
 public class Aplicacion {
 
 public static void main(String[] args) {
@@ -53,7 +53,7 @@ Los archivos que he editado son los que apareceran con un \* al inicio:
 
 Archivo -> `bingo/model/Bingo.java`.
 
-```java
+```javascript
 public void crearTableros() {
 Random rnd = new Random();
 int tableroBingo[][] = null;
@@ -90,7 +90,7 @@ QUE HACE?
 
 la variable rnd crea una instancia de Random, esto servira para crear numero aleatorios.
 
-```java
+```javascript
 Random rnd = new Random();
 ```
 
@@ -100,7 +100,7 @@ Son tres ciclos `for`.
 - El segundo se repetira la cantidad de columnas del tablero.
 - El tercero se repetira la cantidad de filas del tablero, ademas de aqui estar la logica de los numeros aleatorios.
 
-```java
+```javascript
 if ( j == 0) {
   tableroBingo[i][j] = rnd.nextInt(15-1+1)+1;
 }else if ( j == 1) {
@@ -118,13 +118,13 @@ Aqui se hara un `if` anidado para establecer los rangos de los numeros, esto por
 
 esta declaracion de variable lo que hace es establecer el numero dentro de una cacilla donde i es la columna y j la fila,
 
-```java
+```javascript
 tableroBingo[i][j]
 ```
 
 este pedazo de codigo genera el numero aleatorio dentro del rango que le asignemos.
 
-```java
+```javascript
 rnd.nextInt(numeroMaximo-numeroMinimo+1)+numeroMaximo;
 ```
 
@@ -132,7 +132,7 @@ donde `numeroMaximo` es el valor maximo que puede alcanzar el numero y `numeroMi
 Ejemplo:
 para crear un numero aleatorio en un rango de 30 a 45, el codigo seria asi:
 
-```java
+```javascript
   tableroBingo[i][j] = rnd.nextInt(45-30+1)+30;
 ```
 
@@ -146,7 +146,7 @@ Asi que solo mostrare algunos aspectos importanter.
 El codigo completo del archivo estara aqui [VentanaBingo.java](https://drive.google.com/file/d/1514OzHcbO_4gRc11mrpp9VnVZUHd5DdA/view?usp=sharing).
 
 Este texto se puede remplazar por cualquier otro y seria el primer mensaje que el usuario observaria.
-```java
+```javascript
 areaMensaje.setText(
    "▓█████▄  ██▀███   ▒█████   ██▓███  ▓█████▄ ▓█████ ▄▄▄      ▓█████▄   ██████ "
 +"\n▒██▀ ██▌▓██ ▒ ██▒▒██▒  ██▒▓██░  ██▒▒██▀ ██▌▓█   ▀▒████▄    ▒██▀ ██▌▒██    ▒ "
@@ -160,19 +160,19 @@ areaMensaje.setText(
 +"\n ░                                  ░                       ░           ");
 ```
 Esta funcion servira para cambiar el tema del programa, algo al estilo del modo oscuro o el modo luz, realmente no es necesario pero la profesora nos va a dar puntos por eso.
-```java
+```javascript
 public void cambiarColores(int backgroundColor, int foregroundColor) {
   `...somecode`
 }
 ```
 Para agregar eventos a los botones o cualquier elemento, se usa esto.
-```java 
+```javascript 
 button.addActionListener(this);
 ```
 `button` se remplaza con la variable que contiene el boton o cualquiero otro elemento, este codigo se pone al final de la funcion principal.
 esto solo llama una funcion y envia ese elemnto, dentro de la funcion debemos hacer lo siguiente.
 
-```java
+```javascript
 public void actionPerformed(ActionEvent e) {
   if (e.getSource() == button) {
 			JOptionPane.showMessageDialog(null, "esto es una ventana de dialogo");
